--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,3 +1,49 @@
-.button {
-    -fx-font-weight: bold;
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+}
+.root{
+    -fx-background-image:url("/img/back.jpeg");
+    -fx-background-size:cover;
+}
+.loginPageButtons{
+    -fx-background-color:transparent;
+    -fx-text-fill:white;
+    -fx-border-width:0px 0px 2px 0px;
+    -fx-border-color:white;
+    -fx-font-size:1.5em;
+    -fx-font-weight:bold;
+}
+.active{
+    -fx-text-fill:#aeaeae;
+}
+
+#titleLogin{
+    -fx-font-family:Roboto;
+    -fx-font-weight:bolder;
+    -fx-font-size:2.4em;
+    -fx-fill:white;
+    
+}
+.inputField{
+    -fx-background-color:transparent;
+    -fx-prompt-text-fill:white;
+}
+.icon{
+    -fx-font-size:1.3em;
+}
+.containerField{
+    -fx-border-color:white;
+    -fx-border-width:0px 0px 2px 0px;
+}
+.enterButton{
+    -fx-background-color:#2f2f2fa3;
+    -fx-background-radius:100px;
+    -fx-text-fill:white;
+    -fx-font-family:Roboto;
+    -fx-font-weight:bold;
+}
+.enterButton .icon{
+    -fx-font-size:2em;
+    -fx-text-fill:white;
 }
