--- a/src/main/resources/fxml/Login_Signup.fxml
+++ b/src/main/resources/fxml/Login_Signup.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="962.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="962.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.mercato.Login_Signup_Controller">
    <children>
       <HBox alignment="CENTER" layoutX="338.0" layoutY="183.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
@@ -24,12 +27,12 @@
             </Text>
             <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button mnemonicParsing="false" styleClass="loginPageButtons" text="Registrati">
+                  <Button fx:id="pageRegistrati" mnemonicParsing="false" onAction="#formRegistrati" styleClass="loginPageButtons" text="Registrati">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Login">
+                  <Button fx:id="pageLogin" mnemonicParsing="false" onAction="#formLogin" text="Login">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
@@ -42,11 +45,12 @@
             </HBox>
          </children>
       </HBox>
-      <VBox layoutX="331.0" layoutY="204.0" prefHeight="200.0" prefWidth="300.0">
+      <VBox fx:id="loginVBox" layoutX="331.0" layoutY="204.0" prefHeight="200.0" prefWidth="300.0">
          <children>
             <HBox alignment="CENTER" prefWidth="250.0" styleClass="containerField">
                <children>
-                  <TextField prefHeight="40.0" promptText="email" styleClass="inputField" HBox.hgrow="ALWAYS" />
+                  <FontAwesomeIconView glyphName="USER" styleClass="icon" />
+                  <TextField fx:id="emailField" prefHeight="40.0" promptText="email" styleClass="inputField" HBox.hgrow="ALWAYS" />
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
@@ -54,13 +58,66 @@
             </HBox>
             <HBox alignment="CENTER" prefWidth="250.0" styleClass="containerField">
                <children>
-                  <TextField promptText="password" styleClass="inputField" HBox.hgrow="ALWAYS" />
+                  <FontAwesomeIconView glyphName="KEY" styleClass="icon" />
+                  <TextField fx:id="passwordField" promptText="password" styleClass="inputField" HBox.hgrow="ALWAYS" />
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="300.0" styleClass="enterButton" text="    Accedi">
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="31.0" prefWidth="300.0" styleClass="enterButton" text="    Accedi">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+               <graphic>
+                  <FontAwesomeIconView glyphName="ANGLE_RIGHT" styleClass="icon" />
+               </graphic>
+            </Button>
+         </children>
+      </VBox>
+      <VBox fx:id="registratiVBox" layoutX="331.0" layoutY="152.0" prefHeight="200.0" prefWidth="300.0" visible="false">
+         <children>
+            <HBox alignment="CENTER" prefWidth="250.0" styleClass="containerField">
+               <children>
+                  <TextField fx:id="nomeRegistazione" prefHeight="40.0" promptText="nome" styleClass="inputField" HBox.hgrow="ALWAYS" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefWidth="250.0" styleClass="containerField">
+               <children>
+                  <TextField fx:id="cognomeRegistrazione" prefHeight="40.0" promptText="cognome" styleClass="inputField" HBox.hgrow="ALWAYS" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="containerField">
+               <children>
+                  <TextField fx:id="emailRegistrazione" promptText="email" styleClass="inputField" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="containerField">
+               <children>
+                  <PasswordField fx:id="passwordRegistrazione" promptText="password" styleClass="inputField" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="containerField">
+               <children>
+                  <ChoiceBox fx:id="scegliRuolo" styleClass="choiceBoxField" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <Button fx:id="registratiButton" mnemonicParsing="false" onAction="#registrazione" prefHeight="31.0" prefWidth="300.0" styleClass="enterButton" text="Registrati">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
