--- a/src/main/resources/fxml/Login_Signup.fxml
+++ b/src/main/resources/fxml/Login_Signup.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -12,7 +13,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<?import java.net.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="962.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.mercato.Login_Signup_Controller">
    <children>
@@ -66,6 +66,15 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="92.0" prefWidth="250.0" styleClass="containerField">
+               <children>
+                  <ChoiceBox fx:id="scegliRuoloLogin" prefHeight="30.0" prefWidth="334.0" styleClass="choiceBoxField">
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+               </children>
+            </HBox>
             <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefHeight="31.0" prefWidth="300.0" styleClass="enterButton" text="    Accedi">
                <VBox.margin>
                   <Insets top="20.0" />
@@ -112,7 +121,7 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" styleClass="containerField">
                <children>
-                  <ChoiceBox fx:id="scegliRuolo" styleClass="choiceBoxField" />
+                  <ChoiceBox fx:id="scegliRuoloRegistrazione" styleClass="choiceBoxField" />
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
@@ -127,6 +136,6 @@
       </VBox>
    </children>
    <stylesheets>
-       <URL value="@../styles/Styles.css"/>
+       <URL value="@../styles/Styles.css" />
    </stylesheets>
 </AnchorPane>
